fix contact spacing

--- a/css/general.css
+++ b/css/general.css
@@ -351,8 +351,7 @@ ul#nav-list li a:active {
 }
 
 .contact-info p{
-	text-align: left;
-	margin-left: 370px;
+	text-align: center;
 	font-size: 24px;
 	color: white;
 	margin-top: 0;
